fix: added error message display and corrected input visibility for login and signup page

--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -51,6 +51,10 @@ font-size:1em;
 box-sizing:border-box;
 }
 
+#sel-choice{
+    visibility:none;
+}
+
 .email-phone{
 display:flex;
 flex-direction:row;
