--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -94,6 +94,20 @@ section{
 
 #sel-choice{
     border:1px solid var(--background_color_tertiary);
+    visibility:hidden;
+}
+
+#password{
+    border:1px solid var(--background_color_tertiary);
+}
+
+.error-password{
+    color:hsla(0, 77%, 58%, 0.753);
+    font-size:0.9em;
+    margin-top:5px;
+    text-indent:20px;
+    font-weight:light;
+    letter-spacing:1px;
 }
 
 .email-phone{
@@ -119,6 +133,8 @@ input[type="checkbox"]{
     width:20px;
     height:20px;
     margin-right:10px;
+    position:relative;
+    top:4px;
 }
 
 #consent{
